--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "exp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "login.js",
   "scripts": {
     "start": "vite  "
   },
@@ -14,5 +14,8 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.2"
+  },
+  "dependencies": {
+    "aos": "^2.3.4"
   }
 }
